--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+                    <!--<li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>-->
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <!--<li><a href="blog.html">Blog</a></li>
                     <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -248,7 +248,7 @@
             <br><br>
             <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img src="https://cdn.pixabay.com/photo/2016/03/09/09/22/workplace-1245776_960_720.jpg" alt="images not found">
+                    <img src="assets/img/carousel/1-c.png" alt="images not found">
                     <div class="cover">
                         <div class="container">
                             <div class="header-content">
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="https://cdn.pixabay.com/photo/2019/11/18/02/41/autumn-leaves-4633854_960_720.jpg" alt="images not found">
+                    <img src="assets/img/carousel/2-c.png" alt="images not found">
                     <div class="cover">
                         <div class="container">
                             <div class="header-content">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="https://cdn.pixabay.com/photo/2020/04/16/02/44/dandelion-5048825_960_720.jpg" alt="images not found">
+                    <img src="assets/img/carousel/3-c.png" alt="images not found">
                     <div class="cover">
                         <div class="container">
                             <div class="header-content">
@@ -444,7 +444,7 @@
         <!-- End Counts Section -->
 
         <!-- ======= Features Section ======= -->
-        <section id="features" class="features">
+        <!--<section id="features" class="features">
 
             <div class="container" data-aos="fade-up">
 
@@ -510,13 +510,13 @@
                 </div>
                 <!-- / row -->
 
-                <!-- Feature Tabs -->
-                <div class="row feture-tabs" data-aos="fade-up">
+        <!-- Feature Tabs -->
+        <!--<div class="row feture-tabs" data-aos="fade-up">
                     <div class="col-lg-6">
                         <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
 
                         <!-- Tabs -->
-                        <ul class="nav nav-pills mb-3">
+        <!-- <ul class="nav nav-pills mb-3">
                             <li>
                                 <a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a>
                             </li>
@@ -529,8 +529,8 @@
                         </ul>
                         <!-- End Tabs -->
 
-                        <!-- Tab Content -->
-                        <div class="tab-content">
+        <!-- Tab Content -->
+        <!--<div class="tab-content">
 
                             <div class="tab-pane fade show active" id="tab1">
                                 <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
@@ -548,7 +548,7 @@
                             </div>
                             <!-- End Tab 1 Content -->
 
-                            <div class="tab-pane fade show" id="tab2">
+        <!-- <div class="tab-pane fade show" id="tab2">
                                 <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="bi bi-check2"></i>
@@ -564,7 +564,7 @@
                             </div>
                             <!-- End Tab 2 Content -->
 
-                            <div class="tab-pane fade show" id="tab3">
+        <!--<div class="tab-pane fade show" id="tab3">
                                 <p>Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita. Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="bi bi-check2"></i>
@@ -580,7 +580,7 @@
                             </div>
                             <!-- End Tab 3 Content -->
 
-                        </div>
+        <!-- </div>
 
                     </div>
 
@@ -591,8 +591,8 @@
                 </div>
                 <!-- End Feature Tabs -->
 
-                <!-- Feature Icons -->
-                <div class="row feature-icons" data-aos="fade-up">
+        <!-- Feature Icons -->
+        <!--<div class="row feature-icons" data-aos="fade-up">
                     <h3>Ratione mollitia eos ab laudantium rerum beatae quo</h3>
 
                     <div class="row">
@@ -666,7 +666,7 @@
                 </div>
                 <!-- End Feature Icons -->
 
-            </div>
+        <!--</div>
 
         </section>
         <!-- End Features Section -->
@@ -737,14 +737,14 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+                    <!--<div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
                         <div class="service-box pink">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Dolori Architecto</h3>
                             <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
                             <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
                         </div>
-                    </div>
+                    </div>-->
 
                 </div>
 
@@ -754,7 +754,7 @@
         <!-- End Services Section -->
 
         <!-- ======= Pricing Section ======= -->
-        <section id="pricing" class="pricing">
+        <!-- <section id="pricing" class="pricing">
 
             <div class="container" data-aos="fade-up">
 
@@ -838,7 +838,7 @@
         <!-- End Pricing Section -->
 
         <!-- ======= F.A.Q Section ======= -->
-        <section id="faq" class="faq">
+        <!--<section id="faq" class="faq">
 
             <div class="container" data-aos="fade-up">
 
@@ -850,7 +850,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <!-- F.A.Q List 1-->
-                        <div class="accordion accordion-flush" id="faqlist1">
+        <!-- <div class="accordion accordion-flush" id="faqlist1">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
@@ -900,7 +900,7 @@
                     <div class="col-lg-6">
 
                         <!-- F.A.Q List 2-->
-                        <div class="accordion accordion-flush" id="faqlist2">
+        <!--<div class="accordion accordion-flush" id="faqlist2">
 
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -955,7 +955,7 @@
         <!-- End F.A.Q Section -->
 
         <!-- ======= Portfolio Section ======= -->
-        <section id="portfolio" class="portfolio">
+        <!--<section id="portfolio" class="portfolio">
 
             <div class="container" data-aos="fade-up">
 
@@ -1350,7 +1350,7 @@
         <!-- End Clients Section -->
 
         <!-- ======= Recent Blog Posts Section ======= -->
-        <section id="recent-blog-posts" class="recent-blog-posts">
+        <!--<section id="recent-blog-posts" class="recent-blog-posts">
 
             <div class="container" data-aos="fade-up">
 
@@ -1495,7 +1495,7 @@
 
         <div class="footer-newsletter">
             <div class="container">
-                <div class="row justify-content-center">
+                <!--<div class="row justify-content-center">
                     <div class="col-lg-12 text-center">
                         <h4>Our Newsletter</h4>
                         <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
@@ -1505,7 +1505,7 @@
                             <input type="email" name="email"><input type="submit" value="Subscribe">
                         </form>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
 
