updated profile info

--- a/index.html
+++ b/index.html
@@ -307,21 +307,23 @@
                                 Globalization is contributing to rapid changes in Africa's economy andas such economic integration and transformation is paramount to oursuccess. Forty Nine 57 recognizes this evolution and we havepositioned ourselves as part of the drivers of economic
                                 integration inGhana.
                                 <br>
-                                <strong>Forty Nine 57</strong> Limited uses a social enterprise approach as a catalystfor increasing access, choice, and quality of medical products andequipment, education tourism, Events and facilitation of healthconferences
-                                and research by applying commercial principles and usingethical business practices while maintaining a reputation for quality.
+                                <strong>Forty Nine 57</strong> Limited uses a social enterprise approach as a catalystfor increasing access, choice, and quality for medical products andequipment, education tourism, health care infrastructure developmentand
+                                health resource development; by applying commercial principlesand using ethical business practices while maintaining a reputation forquality.
                             </p>
                             <h3>Founder of forty nine 57</h3>
                             <h2>Dr Bright Eric Ohene</h2>
                             <p>
-                                Dr Ohene multi-professional expertise in the fields of Biomedical Scienceand Medicine (Msc). His specialisation is in Cardiovascular Surgery andInvasive Cardiology (PhD) and Land Economy, MGhiS. He is a member ofGhana Institution of Surveyors with 10
-                                years experience in propertymanagement.
+                                MD, PhD, is a Ghanaian cardiovascular surgeon, Invasive Cardiologistbiomedical scientist, expert in diseases of poverty, international medicineand public health advocate and motivational speaker.
+                                <br><br> Dr Ohene has a deep understanding of Asian business culture, and hasexpertise in high level negotiations and health diplomacy.
+                                <br><br> He has vast knowledge in Healthcare System Improvement having consultedin this field for many year.
                             </p>
-
                             <h2>where we want to be</h2>
                             <p>
-                                Our main goal is to improve the service and industry standards inGhana when it comes to Health and Hospitality. We aim to achieve thisthrough a multilayered approach. We bring a vast business andprofessional network spanning across four continents.<br>                                We have a management team with 30+ years combined experience inthe Healthcare, Education and Hospitality sector. We work together todevelop services and solutions to meet the needs of our customers.<br> Our business network
-                                both locally and internationally are the corepillars of Forty Nine 57 and the growth we foresee. We strive to develop new and innovative products & services to meet the growingneeds of healthcare, Education and Hospitality
-                                in Ghana, Africa and further a field. <br> We also aim to push ourselves to improve the service and industrystandards in Ghana when it comes to health and Hospitality.
+                                Our main goal is to improve the service and industry standards inGhana when it comes to Health and Hospitality. We aim to achieve thisthrough a multilayered approach. We bring a vast business andprofessional network spanning across four continents.
+                                <br><br> We have a management team with 30+ years combined experience inthe Healthcare, Education and Hospitality sector. We work together todevelop services and solutions to meet the needs of our customers.
+                                <br><br>Our business network both locally and internationally are the corepillars of Forty Nine 57 and the growth we foresee. We strive to develop new and innovative products & services to meet the growingneeds of healthcare,
+                                Education and Hospitality in Ghana, Africa andfurther afield.
+                                <br><br> We also aim to push ourselves to improve the service and industrystandards in Ghana when it comes to health and Hospitality.
                             </p>
                         </div>
                     </div>
@@ -686,9 +688,12 @@
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-box blue">
                             <i class="ri-discuss-line icon"></i>
-                            <h3>Import of Medical Equipment:</h3>
-                            <p>Forty Nine 57 is a single source provider of medical devices andinstruments, making it easier and more affordable for every hospital,clinic, and medical practice to have the very best equipment, suppliesand service. We have
-                                in our portfolio premium quality of medicaltechnologies.</p>
+                            <h3>Medical Infrastructure Development:</h3>
+                            <p>
+                                We have consultants to help with the development of hospitaland primary health care facilities and health management systemsfor efficient service delivery.
+                                <br><br> Forty Nine 57 is a single source provider of medical devices andinstruments, making it easier and more affordable for everyhospital, clinic, and medical practice to have the very bestequipment, supplies and service.
+                                We have in our portfoliopremium quality of medical technologies.
+                            </p>
                             <!--<a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>-->
                         </div>
                     </div>
@@ -697,8 +702,9 @@
                         <div class="service-box orange">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Medical Conferences, Events and Facilitation:</h3>
-                            <p>We specialize in collaborative event planning and conferencemanagement services to a range of mission-based organizations aroundthe globe; including scientific research organizations and non-profitassociations for Health &
-                                Medical research Conferences & Workshops inGhana, West Africa and the African Continent. We’ve built a wealth ofknowledge to meet the complicated and specialized requirements ofthese types of events.
+                            <p>
+                                We specialize in collaborative event planning and conferencemanagement services to a range of mission-based organizations aroundthe globe; including scientific research organizations and non-profitassociations for Health & Medical research Conferences
+                                & Workshops inGhana, West Africa and the African Continent. We’ve built a wealth ofknowledge to meet the complicated and specialized requirements ofthese types of events.
                             </p>
                         </div>
                     </div>
@@ -711,21 +717,27 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+                    <div class="col-lg-8 col-md-8" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-box red">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Educational Tourism And Hospitality:</h3>
                             <p>
                                 Travel is a form of education. Travel provides a uniquely immersive,interactive and dynamic cultural experience. We offer an exciting arrayof student tour packages and custom trips geared to the specificrequirements of high schools, colleges, alumni groups
-                                and educationalinstitutions. We handle all the tour details to lessen the load.<br> We provide:
-                                <li>
-                                    Customized, once-in-a-lifetime travel itineraries and educationalexperiences.
-                                </li>
-                                <li>
-                                    Insider tips for the leading student travel destinations , studyabroad programs, universities and attractions.
-                                </li>
-
+                                and educationalinstitutions. We handle all the tour details to lessen the load.
+                                <br><br> Our main focus is to provide an in depth guide to studying medicine asan International student. We will take you through the steps in securingadmission into International medical programs. We also provideinformation
+                                on available scholarships and financial aid to help youachieve your dreams.
+                                <br><br> We provide:
                             </p>
+                            <div style="text-align: left !important;color:#fff">
+                                <lu>
+                                    <li>
+                                        Customized, once-in-a-lifetime travel itineraries and educationalexperiences
+                                    </li>
+                                    <li>
+                                        Insider tips for the leading student travel destinations , studyabroad programs, universities and attractions.
+                                    </li>
+                                </lu>
+                            </div>
                         </div>
                     </div>
 
@@ -733,7 +745,7 @@
                         <div class="service-box purple">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Exporters of African Goods</h3>
-                            <p>Four Nine 57 Limited exports Ghanaian textiles, cultural artifacts andproduce to the US, European and Asian Markets.</p>
+                            <p>Forty Nine 57 Limited exports Ghanaian textiles, cultural artifacts andproduce to the US, European and Asian Markets.</p>
                         </div>
                     </div>
 
