updated profile info

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                                 on available scholarships and financial aid to help youachieve your dreams.
                                 <br><br> We provide:
                             </p>
-                            <div style="text-align: left !important;color:#fff">
+                            <div style="text-align: left">
                                 <lu>
                                     <li>
                                         Customized, once-in-a-lifetime travel itineraries and educationalexperiences
