updated profile info

--- a/index.html
+++ b/index.html
@@ -728,28 +728,25 @@
                                 on available scholarships and financial aid to help youachieve your dreams.
                                 <br><br> We provide:
                             </p>
-                            <div style="text-align: left">
-                                <lu>
-                                    <li>
-                                        Customized, once-in-a-lifetime travel itineraries and educationalexperiences
-                                    </li>
-                                    <li>
-                                        Insider tips for the leading student travel destinations , studyabroad programs, universities and attractions.
-                                    </li>
-                                </lu>
-                            </div>
+
+                            <p style="text-align: left !important;">Customized, once-in-a-lifetime travel itineraries and educationalexperiences
+                            </p>
+                            <p style="text-align: left !important;">
+                                Insider tips for the leading student travel destinations , studyabroad programs, universities and attractions.
+                            </p>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-                        <div class="service-box purple">
-                            <i class="ri-discuss-line icon"></i>
-                            <h3>Exporters of African Goods</h3>
-                            <p>Forty Nine 57 Limited exports Ghanaian textiles, cultural artifacts andproduce to the US, European and Asian Markets.</p>
-                        </div>
+                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+                    <div class="service-box purple">
+                        <i class="ri-discuss-line icon"></i>
+                        <h3>Exporters of African Goods</h3>
+                        <p>Forty Nine 57 Limited exports Ghanaian textiles, cultural artifacts andproduce to the US, European and Asian Markets.</p>
                     </div>
+                </div>
 
-                    <!--<div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+                <!--<div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
                         <div class="service-box pink">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Dolori Architecto</h3>
@@ -758,7 +755,7 @@
                         </div>
                     </div>-->
 
-                </div>
+            </div>
 
             </div>
 
