updated with products

--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Products</a></li>
                     <!--<li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>-->
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <!--<li><a class="nav-link scrollto" href="#team">Team</a></li>-->
                     <!--<li><a href="blog.html">Blog</a></li>
                     <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
@@ -1117,13 +1118,13 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= Testimonials Section ======= -->
-        <section id="testimonials" class="testimonials">
+        <!--<section id="testimonials" class="testimonials">
 
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h2>Testimonials</h2>
-                    <p>What they are saying about us</p>
+                    <h2>Products</h2>
+                    <p>Products</p>
                 </header>
 
                 <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="200">
@@ -1134,6 +1135,7 @@
                                 <div class="stars">
                                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                                 </div>
+                                <h3>Health Care Products:</h3>
                                 <p>
                                     Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                                 </p>
@@ -1144,7 +1146,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
+                        <!-- End testimonial item 
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -1161,7 +1163,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
+                        <!-- End testimonial item 
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -1178,7 +1180,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
+                        <!-- End testimonial item 
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -1195,7 +1197,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
+                        <!-- End testimonial item 
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
@@ -1212,7 +1214,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End testimonial item -->
+                        <!-- End testimonial item 
 
                     </div>
                     <div class="swiper-pagination"></div>
@@ -1229,8 +1231,9 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h2>Team</h2>
-                    <p>Our hard working team</p>
+                    <h2>Products</h2>
+                    <p>Products</p>
+                    <h3>HEALTH AND MEDICAL CATEGORY</h3>
                 </header>
 
                 <div class="row gy-4">
@@ -1238,77 +1241,113 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                                <!--<img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                             <div class="member-info">
-                                <h4>Walter White</h4>
-                                <span>Chief Executive Officer</span>
-                                <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
+                                <h4>Health Care Products</h4>
+                                <span></span>
+                                <ul>
+                                    <li>Health Care and Supplies</li>
+                                    <li>Rehabilitation Therapy supplies</li>
+                                    <li>Ear and hearing products</li>
+                                    <li>Massage products</li>
+                                </ul>
                             </div>
+                            <a class="btn btn-success" href="#contact">Contact Us</a>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                                <!--<img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                             <div class="member-info">
-                                <h4>Sarah Jhonson</h4>
-                                <span>Product Manager</span>
-                                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                                <h4>Household medical devices</h4>
+                                <span></span>
+                                <ul>
+                                    <li>Blood pressure monitor</li>
+                                    <li>Glucose meter</li>
+                                    <li>Nebulizer</li>
+                                    <li>Pulse oximeter</li>
+                                    <li>Thermometer</li>
+                                </ul>
                             </div>
+                            <a class="btn btn-success" href="#contact">Contact Us</a>
                         </div>
                     </div>
-
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                                <!--<img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>                             
+                            </div>-->
                             </div>
                             <div class="member-info">
-                                <h4>William Anderson</h4>
-                                <span>CTO</span>
-                                <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim aut architecto porro aspernatur molestiae modi.</p>
+                                <h4>Professional Medical Devices</h4>
+                                <span></span>
+                                <ul>
+                                    <li>Clinical Analytic Instrument</li>
+                                    <li>Dental equipment</li>
+                                    <li>Emergency & Clinics Apparatuses</li>
+                                    <li>Emergency Medical supplies & Training</li>
+                                    <li>General Assay & Diagnostic Apparatuses</li>
+                                    <li>Hospital furniture</li>
+                                    <li>Implants & interventional Materials</li>
+                                    <li>Infusion, nursing & protective instrument</li>
+                                    <li>Medical Cryogenic equipment</li>
+                                    <li>Medical software</li>
+                                    <li>Obstetrics and gynecology & birth control</li>
+                                    <li>Physical therapy equipment</li>
+                                    <li>Radiology equipment and accessories</li>
+                                </ul>
                             </div>
+                            <a class="btn btn-success" href="#contact">Contact Us</a>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                                <!--<img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="bi bi-twitter"></i></a>
                                     <a href=""><i class="bi bi-facebook"></i></a>
                                     <a href=""><i class="bi bi-instagram"></i></a>
                                     <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                             <div class="member-info">
-                                <h4>Amanda Jepson</h4>
-                                <span>Accountant</span>
-                                <p>Rerum voluptate non adipisci animi distinctio et deserunt amet voluptas. Quia aut aliquid doloremque ut possimus ipsum officia.
-                                </p>
+                                <h4>Medical Consumables</h4>
+                                <span></span>
+                                <ul>
+                                    <li>Blood collection and Transfusion Apparatuses</li>
+                                    <li>General Medical supplies</li>
+                                    <li>Medical Adhesive</li>
+                                    <li>Medical Disinfection products</li>
+                                    <li>Medical kits</li>
+                                    <li>Medical masks, medical protective clothing</li>
+                                    <li>Medical Suture materials & Instruments</li>
+                                    <li>Pipes, drainage and containers</li>
+                                </ul>
                             </div>
+                            <a class="btn btn-success" href="#contact">Contact Us</a>
                         </div>
                     </div>
 
