--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@
                             P.O DC 417,<br> Dansoman
                             <br> Accra <br><br>
                             <strong>Phone:</strong> +1 857 350 2197<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Email:</strong> info@4957limited.com<br>
                         </p>
 
                     </div>
